# rs_trader

./: Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: connector.rs  lib.rs  order_routing.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  menu.rs  menu_button.rs  panes.rs  tree_behavior.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: lib.rs
crates/plugins_interfaces/: Cargo.toml
crates/plugins_interfaces/src/: lib.rs
crates/rs-trader/: Cargo.toml
crates/rs-trader/src/: main.rs
plugins/connectors/rithmic/: Cargo.toml  build.rs
plugins/connectors/rithmic/src/: lib.rs
plugins/panes/accounts/: Cargo.toml
plugins/panes/accounts/src/: lib.rs
plugins/panes/connections/: Cargo.toml
plugins/panes/connections/src/: lib.rs
plugins/panes/orders/: Cargo.toml
plugins/panes/orders/src/: lib.rs
plugins/panes/positions/: Cargo.toml
plugins/panes/positions/src/: lib.rs
