[package]
name = "gui"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
messaging.workspace = true
plugins_interfaces.workspace = true
egui.workspace = true
eframe.workspace = true
egui_tiles.workspace = true
serde.workspace = true
flume.workspace = true
log.workspace = true
