[package]
name = "plugins_interfaces"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
egui.workspace = true
egui_tiles.workspace = true
libloading.workspace = true
regex.workspace = true
