[package]
name = "plugin_pane_positions"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
messaging.workspace = true
plugins_interfaces.workspace = true

anyhow.workspace = true
egui.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
